RESOLVED FIXED62611
Crash when trying to use Netflix Watch Instantly with Silverlight 3
https://bugs.webkit.org/show_bug.cgi?id=62611
Summary Crash when trying to use Netflix Watch Instantly with Silverlight 3
Anders Carlsson
Reported 2011-06-13 16:55:18 PDT
Crash when trying to use Netflix Watch Instantly with Silverlight 3
Attachments
Patch (7.06 KB, patch)
2011-06-13 16:57 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-06-13 16:57:59 PDT
Anders Carlsson
Comment 2 2011-06-13 17:10:27 PDT
Note You need to log in before you can comment on or make changes to this bug.